# easydl

./: .gitignore  .pre-commit-config.yaml  ChangeLog.md  README.md  dev-design-v1.0.md  development.md  mkdocs.yml  pyproject.toml  pytest.ini  refine.md  tasks.md
.github/workflows/: ci.yml
dev-setup/: README.md  activate.sh  install-hooks.sh  run-tests.sh  setup-dev.sh
docs/: changelog.md  examples.md  index.md
docs/api/: clf.md  common_infer.md  common_trainer.md  data.md  dml.md  image.md  index.md
docs/getting-started/: installation.md  quick-start.md
docs/user-guide/: datasets.md  image-loading.md  metric-learning.md  training.md
easydl/: __init__.py  common_infer.py  common_trainer.py  config.py  data.py  image.py  model_wrapper.py  numpyext.py  utils.py  visualization.py
easydl/clf/: image_net.py  interface.py  pytorch_models.py
easydl/clustering/: __init__.py  functions.py  metrics.py
easydl/demo/: cnn.py
easydl/dml/: evaluation.py  hf_models.py  infer.py  inferface.py  interface.py  loss.py  pytorch_models.py  simulation.py  trainer.py
easydl/public_dataset/: cub.py
easydl/reid/: clip_reid_config.py  clip_reid_trainer.py  loss.py
examples/: 01_quick_start.py  02_extract_embeddings.py  03_find_similar_images.py  04_train_metric_model.py  README.md  dml_evaluation_examples.ipynb  exp_cub.py  image_net_classifier.ipynb
examples/deep_metric_learning/: dml_evaluation_examples.ipynb
examples/visualization/: visualize_preprocessed_image.ipynb
exp-ws/: .gitignore  README.md  run-example.sh  template.py
tests/: __init__.py  conftest.py
tests/dml/: test_evaluation.py  test_infer.py
tests/real_test/: test_dml_models.py  test_resent_clf.py
tests/tier1_unit/: __init__.py  test_evaluation.py  test_image.py  test_infer.py  test_loss.py
tests/tier2_component/: __init__.py  test_models.py  test_regression.py
tests/tier2_component/golden_data/: resnet18_distances.json
tests/tier3_integration/: __init__.py  test_evaluation_real.py
tests/tier4_e2e/: __init__.py  test_training_pipeline.py
tests/unit_tests/: __init__.py  test_clip_reid.py  test_image.py  test_loss.py
